\name{NEWS}
\title{News for Package \pkg{actilifecounts}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 1.1.0 [grosella] (release date: 25-9-2022)}{
\itemize{
  \item Included vector magnitude counts in the output
  }
}

\section{Changes in version 1.0.2 [sandía] (Github-only release date: 31-7-2022)}{
\itemize{
  \item Warning from trying to remove upscaling_roll_factor when not defined handled
  }
}

\section{Changes in version 1.0.1 [arándano] (Github-only release date: 28-5-2022)}{
\itemize{
  \item Improved test coverage
  }
}

\section{Changes in version 1.0.0 [plátano] (release date: 27-5-2022)}{
\itemize{
  \item Set up workflows
  \item Package ready for first CRAN release
  }
}

\section{Changes in version 0.4.1 [frambuesa] (Github-only release date: 27-5-2022)}{
\itemize{
  \item update package name to actilifecounts
  }
}

\section{Changes in version 0.4.0 [mango] (Github-only release date: 25-5-2022)}{
\itemize{
  \item First version of the package
  \item Included test files
  \item Resample function renamed as resample_30hz
  \item Axes names included in output
  \item The package handles both uniaxial and triaxial data
  }
}