@@ -1,21 +1,22 @@
 Package: actilifecounts
 Type: Package
 Title: Generate Activity Counts from Raw Accelerometer Data
-Version: 1.1.0
+Version: 1.1.1
 Author: Jairo Hidalgo Migueles
 Maintainer: Jairo Hidalgo Migueles <jairo.hidalgo.migueles@gmail.com>
 Description: A tool to obtain activity counts, originally a translation of the 
   'python' package 'agcounts' <https://github.com/actigraph/agcounts>. This tool
   allows the processing of data from any accelerometer brand, with a more flexible 
   approach to handle different sampling frequencies.
+URL: https://github.com/jhmigueles/actilifecounts
 Encoding: UTF-8
 Depends: R (>= 2.10)
-Imports: gsignal, pracma
+Imports: gsignal, pracma, GGIRread
 RoxygenNote: 7.2.1
 License: LGPL (>= 3)
 Suggests: covr, testthat (>= 3.0.0)
 Config/testthat/edition: 3
 NeedsCompilation: no
-Packaged: 2022-09-26 06:51:35 UTC; jaihid
+Packaged: 2023-03-11 18:15:45 UTC; Jairo
 Repository: CRAN
-Date/Publication: 2022-09-26 08:30:02 UTC
+Date/Publication: 2023-03-11 18:30:04 UTC
