@@ -1,21 +1,21 @@
-589482abc51d65afce077969aef0bccf *DESCRIPTION
-ec86f4e6f701294a7f0b6f0e39c325f9 *NAMESPACE
+a906fb252b31742595ca375428072eb3 *DESCRIPTION
+67e231d504f4461f843446708b70e39f *NAMESPACE
 6a62dfe525b413d77c7c35cea84fc811 *R/bpf_filter.R
 6a3faef20d9e7c9fdfb5ce1d2a7f4eb2 *R/get_counts.R
 e209820d72eb79dac76fda9474b5be02 *R/resample_10hz.R
-f0e6a92cf0328178e2618346b4f33f56 *R/resample_30hz.R
+fa36ebb6d705a11f0c1bbd04836081f0 *R/resample_30hz.R
 1b03c180ac09f0821bf5a5a39026b380 *R/sum_counts.R
 e769a54aee7201f4dcc0981294e93951 *R/sysdata.rda
 84cbe22652a16718757d5c5e0731acfc *R/trim_data.R
 5df7bebf9ed10b40bab4d5ccbc22d5fd *README.md
-02a54e54ca3d583345b933f94e4498a3 *inst/NEWS.Rd
+99b2faa863df8fc1b7bde51057b24150 *inst/NEWS.Rd
 b8a6faf97e9bdc500529d328782325f5 *inst/testfiles/testfile.csv
 6a0c6f1ac76565d115e662b4eaf4b8a8 *man/bpf_filter.Rd
 36fdc0e01d1c9e0766fd8691523fd607 *man/get_counts.Rd
-f1f498781a02b6fc0cdd91f88172c0ed *man/resample_10hz.Rd
-835b833180603f91252a5a5c1170f223 *man/resample_30hz.Rd
-b8a21960f32a0fe8573e9088c28288dc *man/sum_counts.Rd
-eb94650d06e636e804f0ce126e2dcaee *man/trim_data.Rd
+5e58f5fbfaaa57e26196794a5ffb9cf4 *man/resample_10hz.Rd
+988be0e1e41d3663ca6505c503296ff2 *man/resample_30hz.Rd
+6d2ff069b4c51b156a860a7b1ce06485 *man/sum_counts.Rd
+035dd4076419d2120e5c033c4b1b4211 *man/trim_data.Rd
 e6b9eab5373a81206fdc35fdd15f8c37 *tests/testthat.R
 18f1ef38dbf70463c23d17cce84b8f3f *tests/testthat/test-get_counts.R
 c0659dfbfc1088f00f44be50bf753cbb *tests/testthat/test-pipeline.R
