@@ -6,6 +6,7 @@ export(resample_10hz)
 export(resample_30hz)
 export(sum_counts)
 export(trim_data)
+importFrom(GGIRread,resample)
 importFrom(gsignal,filter)
 importFrom(gsignal,filter_zi)
 importFrom(pracma,Lcm)
