@@ -1,6 +1,11 @@
 \name{NEWS}
 \title{News for Package \pkg{actilifecounts}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
+\section{Changes in version 1.1.1 [manzana] (release date: 11-3-2023)}{
+\itemize{
+  \item Able to work with non-integer sampling frequencies
+  }
+}
 \section{Changes in version 1.1.0 [grosella] (release date: 25-9-2022)}{
 \itemize{
   \item Included vector magnitude counts in the output
